Adding functions to get preserved coexpression aurocs for fetal MetaMarkers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,10 @@ export(fit_to_GO)
 export(get_gene_preserved_coexp)
 export(get_geneset_preserved_coexp)
 export(get_geneset_preserved_score)
+export(get_metaMarker_preserved_coexp)
+export(get_metaMarker_preserved_score)
 export(get_spearman)
+export(load_fetal_coexp)
 export(plot_metafetal_results)
 export(plot_metaorganoid_results)
 export(rank_coexpression)
