--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+    parallel,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Depends: 
@@ -17,6 +18,7 @@ Depends:
 LazyData: false
 Imports: 
     data.table,
+    dplyr,
     ggplot2,
     matrixStats,
     reticulate
