Adding the adult co-expression network

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_geneset_preserved_score)
 export(get_metaMarker_preserved_coexp)
 export(get_metaMarker_preserved_score)
 export(get_spearman)
+export(load_adult_coexp)
 export(load_fetal_coexp)
 export(plot_meta_results)
 export(rank_coexpression)
